--- a/prompt builder/index.html
+++ b/prompt builder/index.html
@@ -151,6 +151,9 @@
         <select class="dropdown" id="dropdown10">
             <option name="dropdown10">places</option>
         </select>
+        <select class="dropdown" id="dropdown11">
+            <option name="dropdown11">other</option>
+        </select>
     </div>
     <p class="label">Generated prompt:</p>
     <div class="text-area"><textarea id="generated"></textarea></div>
